# algorithms_part1-04-nicequeue-stud-

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  NiceQueue.h  NiceQueue.hpp  NiceStack.h  NiceStack.hpp  main.cpp
tests/: CMakeLists.txt  nice_queue_test.cpp  nice_stack_test.cpp
